force-app/main/default/objects/Billing_Account__c/Billing_Account__c.object-meta.xml
<CustomObject>
    <label>Billing Account</label>
    <pluralLabel>Billing Accounts</pluralLabel>
    <description
  >The billing entity associated with a customer account, kept separate from the commercial Account record so payment terms and currency can be managed independently of the sales relationship.</description>
    <sharingModel>Private</sharingModel>
    <nameField>
        <label>Billing Account Name</label>
        <type>Text</type>
    </nameField>
</CustomObject>