force-app/main/default/objects/Billing_Account__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <label>Account</label>
    <type>Lookup</type>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Billing Accounts</relationshipLabel>
    <relationshipName>Billing_Accounts</relationshipName>
    <required>true</required>
    <deleteConstraint>Restrict</deleteConstraint>
    <description
  >The commercial account this billing entity belongs to.</description>
</CustomField>