force-app/main/default/objects/Billing_Account__c/fields/Billing_Contact__c.field-meta.xml
<CustomField>
    <fullName>Billing_Contact__c</fullName>
    <label>Billing Contact</label>
    <type>Lookup</type>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Billing Accounts</relationshipLabel>
    <relationshipName>Billing_Accounts</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description
  >The contact responsible for receiving invoices and billing communications.</description>
</CustomField>