force-app/main/default/objects/Billing_Account__c/fields/Currency_Code__c.field-meta.xml
<CustomField>
    <fullName>Currency_Code__c</fullName>
    <label>Currency Code</label>
    <type>Text</type>
    <length>3</length>
    <description
  >ISO 4217 currency code used for invoicing this billing account (e.g. USD, EUR, GBP).</description>
</CustomField>